--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
         sudo gem install cocoapods
         pod install
 
+    - name: List available schemes
+      run: xcodebuild -workspace Muse.xcworkspace -list
+
     - name: Build with xcodebuild (no signing)
       run: |
         xcodebuild -workspace Muse.xcworkspace \
